<resources>
    <string name="app_name">Essteling</string>
    <string name="card_finder_text">Throughout the entire park, cards are hidden in stations. Find these cards by paying close attention to sounds and lights. When you have found a card station, there will be a display showing how many cards are left, and a display that shows a code. Enter the code you see on the display below and you will gain your card!</string>
    <string name="card_number_text">Enter card code!</string>
    <string name="catalogue_button">Catalogue</string>
    <string name="cardfinder_button">Cardfinder</string>
    <string name="battle_button">Battle</string>
    <string name="receive_kaart">Collect card!</string>
    <string name="table_input">Enter table number</string>
    <string name="connect">Connect</string>
    <string name="team_select">Are you in team Blue or Red?</string>
    <string name="opponent_ready">Your opponent is ready and waiting!</string>
    <string name="begin">Start!</string>
    <string name="card_front">Frontside</string>
    <string name="card_back">Backside</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_won_activity">You Won!</string>
    <string name="textview_won_activity">You have won 5 rounds more than your opponent. As a reward you can receive a card!</string>
    <string name="buttontext_won_activity">Receive card</string>
    <string name="no_id_toast">Please enter a table id!</string>
    <string name="battle_request_sent_toast">Battle request sent!</string>
    <string name="no_color_toast">Please select a color!</string>
    <string name="battle_already_playing_toast">This table is already playing!</string>
    <string name="battle_device_id_wrong_toast">Device id is wrong!</string>
    <string name="battle_team_taken">Team is already taken!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tristique enim mi, non euismod sem gravida ut. Nunc sagittis enim nec nibh mattis mattis. Nullam fermentum nisi libero, in finibus nunc consectetur eget. Sed ullamcorper pretium sodales. Suspendisse ut mattis quam, tristique iaculis purus. Suspendisse eu turpis diam. Quisque vulputate nunc felis, id porta ante bibendum eu. Quisque non libero tincidunt, fermentum diam et, eleifend elit. Vestibulum sed est quis enim egestas consequat. Integer quis lobortis turpis. Praesent pellentesque, lectus ut pulvinar dictum, dui ex ullamcorper tortor, quis laoreet ex purus et nulla. Proin at mattis ex. Suspendisse eu est felis. Donec quis tortor at massa viverra interdum. Nunc lobortis mollis diam sed eleifend. Maecenas hendrerit tincidunt viverra. Donec maximus aliquet eros, in tincidunt purus vulputate ut. Vestibulum ut eros vehicula, pharetra ipsum at, dictum est. Nullam viverra eu lectus finibus mattis. Nullam non eros arcu. Morbi in elit nibh. Pellentesque tempor orci metus. Ut quis auctor massa, et eleifend nisi. Donec suscipit at erat nec bibendum. Fusce sed mi id magna accumsan convallis. Aenean maximus erat quis tortor egestas, sit amet pellentesque urna condimentum. Duis a sagittis nunc. </string>
    <string name="purpose_expl">The purpose of this app is to entertain people on their way to a different attraction. With this app you can collect different kinds of cards each with a fun interesting fact on the back.</string>
    <string name="purpose">Purpose</string>
    <string name="how_to_collect_card">How to collect cards</string>
    <string name="how_to_collect_card_expl">You can collect cards by redeeming a code you can find at a collection station. These stations are all around the Essteling. You can enter the code and after that if you click redeem you should see a card popup on your screen. You can also get a card by winning against someon at a battle station.</string>
    <string name="how_to_battle">How to battle</string>
    <string name="how_to_battle_expl">When you come across a battle station and you want to battle you can fill in the number of the battle station click  on a color and after that click on the connect button. When someon else also connect to this station you can battle with him/her. The battle works by clicking on a button on the battle station this button corresponds to a card in your app. The battle is like rock paper scissors each card has a type SWORD beats BOW, BOW beats SHIELD and SHIELD beats SWORD.</string>
    <string name="card_no_code">Please enter a card code!</string>
    <string name="card_request_sent">Card request sent!</string>
    <string name="card_request_failed">Card request failed!</string>
    <string name="cardFrontButton">Front</string>
    <string name="cardBackButton">Back</string>
    <string name="resetButton">Reset</string>
    <string name="your_card_collection">Your card collection</string>
    <string name="new_card_received">You received a new card:</string>
    <string name="card_already_got">You already have the card:</string>
    <string name="options">Options</string>
    <string name="bottomnav_catalogue">Catalogue</string>
    <string name="bottomnav_cardfinder">Cardfinder</string>
    <string name="bottomnav_battle">Battle</string>
    <string name="menu_gamerules">Gamerules</string>
    <string name="menu_options">Options</string>
    <string name="battle_result_won">You won!</string>
    <string name="battle_result_lost">You lost!</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="draw">It was a draw!</string>
    <string name="wrong">is wrong!</string>
    <string name="SHIELD">Shield</string>
    <string name="BOW">Bow</string>
    <string name="SWORD">Sword</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tutorialWelcome">Welcome</string>
    <string name="tutorialCollectCardTitle">How to collect cards</string>
    <string name="tutorialBattleTitle">How to battle with others</string>
    <string name="tutorialFinishButton">Finish tutorial</string>
    <string name="tutorialNextButton">Next</string>
    <string name="all_cards">You already have collected all the cards!</string>

</resources>
