<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kaartvinder">

        <TextView
            android:id="@+id/cardfinder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/card_finder_text"
            android:fontFamily="@font/proxima_nova_bold"
            android:textSize="20dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/cardcode_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="number"
            android:hint="@string/card_number_text"
            android:layout_margin="24dp"
            android:fontFamily="@font/proxima_nova_bold"
            android:textSize="20dp"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            app:layout_constraintTop_toBottomOf="@id/cardfinder_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/receive_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingRight="24dp"
            android:paddingLeft="24dp"
            android:paddingBottom="32dp"
            android:paddingTop="32dp"
            android:textSize="25dp"
            android:fontFamily="@font/proxima_nova_bold"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/receive_kaart"
            app:layout_constraintTop_toBottomOf="@id/cardcode_input"
            app:layout_constraintBottom_toTopOf="@id/menu_buttons"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/menu_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/catalogue_button"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/catalogue_button"/>

        <Button
            android:id="@+id/kaartvinder_button"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/cardfinder_button"/>

        <Button
            android:id="@+id/battle_button"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/battle_button"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>