<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".battle">

    <EditText
        android:id="@+id/table_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:paddingRight="56dp"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_connect"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/table_input"
        android:fontFamily="@font/proxima_nova_bold"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/connect"
        android:fontFamily="@font/proxima_nova_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/table_input"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/team_select_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/team_select"
        android:fontFamily="@font/proxima_nova_bold"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_input" />

    <ImageButton
        android:id="@+id/red_team"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toLeftOf="@id/blue_team"
        app:layout_constraintTop_toBottomOf="@id/team_select_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/red_placeholder"
        android:scaleType="centerCrop" />

    <ImageButton
        android:id="@+id/blue_team"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toRightOf="@id/red_team"
        app:layout_constraintTop_toBottomOf="@id/team_select_text"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/blue_placeholder"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/opponent_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/opponent_ready"
        android:fontFamily="@font/proxima_nova_bold"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/red_team"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/begin"
        android:fontFamily="@font/proxima_nova_bold"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/opponent_ready"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>